Bug 41 -Navbar droparrow is suddenly visible. (oops)

--- a/chrome/content/styles.css
+++ b/chrome/content/styles.css
@@ -12,7 +12,7 @@
     cursor:pointer;
   }
   
-  #barLight .navbutton img  {
+  #barLight .navbutton img:not(#barLogo)  {
     display: none;
   }
 }
